# Fastmail-MCP

./: .env.example  .gitignore  .replit  Dockerfile  README.md  claude_desktop_config.json.example  fastmail_mcp.py  main.py  pyproject.toml  replit.md  requirements.txt  smithery.json  smithery.yaml  test_connection.py
attached_assets/: Pasted--12-15-57-AM-Starting-server-scan-12-15-57-AM-Waking-up_1765095847197.txt  Pasted--3-44-38-PM-Starting-deployment-3-44-40-PM-Fetching-com_1764978439630.txt  Pasted--5-11-37-AM-Starting-deployment-5-11-38-AM-Fetching-com_1765026727807.txt  Pasted--5-13-50-AM-Starting-deployment-5-13-50-AM-Fetching-com_1765026872356.txt  Pasted--5-16-37-AM-Starting-server-scan-5-16-37-AM-Waking-up-s_1765027175143.txt  Pasted--5-25-27-AM-Starting-server-scan-5-25-27-AM-Waking-up-s_1765027733182.txt
src/: __init__.py  fastmail_mcp.py
